--- a/panels/sharing/cc-sharing-networks.ui
+++ b/panels/sharing/cc-sharing-networks.ui
@@ -2,52 +2,30 @@
 <!-- Generated with glade 3.18.1 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
-  <template class="CcSharingNetworks" parent="GtkGrid">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
+  <template class="CcSharingNetworks" parent="GtkBox">
     <property name="margin_start">0</property>
     <property name="margin_end">0</property>
     <property name="margin_top">12</property>
     <property name="margin_bottom">12</property>
-    <property name="row_spacing">12</property>
-    <property name="column_spacing">6</property>
+    <property name="spacing">12</property>
+    <property name="orientation">vertical</property>
     <child>
       <object class="GtkLabel" id="label15">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="xalign">0</property>
         <property name="label" translatable="yes">Networks</property>
         <attributes>
           <attribute name="weight" value="bold"/>
         </attributes>
       </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">0</property>
-        <property name="width">2</property>
-      </packing>
     </child>
     <child>
       <object class="GtkFrame" id="shared-networks-frame">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="hexpand">True</property>
-        <property name="shadow_type">in</property>
         <child>
           <object class="GtkListBox" id="listbox">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
           </object>
         </child>
       </object>
-      <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">2</property>
-        <property name="width">2</property>
-      </packing>
-    </child>
-    <child>
-      <placeholder/>
     </child>
   </template>
 </interface>
