--- a/panels/diagnostics/cc-diagnostics-panel.ui
+++ b/panels/diagnostics/cc-diagnostics-panel.ui
@@ -3,14 +3,11 @@
 <interface>
   <requires lib="gtk+" version="3.14"/>
   <template class="CcDiagnosticsPanel" parent="CcPanel">
-    <property name="visible">True</property>
     <child>
       <object class="GtkScrolledWindow">
-        <property name="visible">1</property>
         <property name="hscrollbar-policy">never</property>
         <child>
-          <object class="HdyClamp">
-            <property name="visible">True</property>
+          <object class="AdwClamp">
             <property name="margin_top">32</property>
             <property name="margin_bottom">32</property>
             <property name="margin_start">12</property>
@@ -18,12 +15,10 @@
 
             <child>
               <object class="GtkBox">
-                <property name="visible">1</property>
                 <property name="orientation">vertical</property>
                 <property name="hexpand">1</property>
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">1</property>
                     <property name="margin-bottom">12</property>
                     <property name="label" translatable="yes">Problem Reporting</property>
                     <property name="wrap">1</property>
@@ -36,7 +31,6 @@
                 </child>
                 <child>
                   <object class="GtkLabel" id="diagnostics_explanation_label">
-                    <property name="visible">1</property>
                     <property name="margin-bottom">12</property>
                     <property name="use-markup">1</property>
                     <property name="wrap">1</property>
@@ -46,35 +40,31 @@
                 </child>
                 <child>
                   <object class="GtkListBox" id="diagnostics_list_box">
-                    <property name="visible">1</property>
-                    <property name="can-focus">1</property>
                     <property name="selection-mode">none</property>
+                    <style>
+                      <class name="content"/>
+                    </style>
                     <child>
                       <object class="GtkListBoxRow">
-                        <property name="visible">1</property>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">1</property>
                         <property name="margin_start">12</property>
                         <property name="margin_end">12</property>
                         <property name="margin_top">12</property>
                         <property name="margin_bottom">12</property>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">1</property>
                                 <property name="label" translatable="yes">_Automatic Problem Reporting</property>
+                                <property name="hexpand">True</property>
+                                <property name="vexpand">True</property>
                                 <property name="use_underline">1</property>
                                 <property name="mnemonic_widget">abrt_switch</property>
                                 <property name="xalign">0</property>
                                 <property name="valign">center</property>
                               </object>
-                              <packing>
-                                <property name="expand">1</property>
-                              </packing>
                             </child>
                             <child>
                               <object class="GtkSwitch" id="abrt_switch">
-                                <property name="visible">1</property>
                                 <property name="halign">end</property>
                                 <property name="valign">center</property>
                               </object>
@@ -83,10 +73,6 @@
                         </child>
                       </object>
                     </child>
-                    <style>
-                      <class name="view"/>
-                      <class name="frame"/>
-                    </style>
                   </object>
                 </child>
               </object>
