--- a/panels/thunderbolt/cc-bolt-device-entry.ui
+++ b/panels/thunderbolt/cc-bolt-device-entry.ui
@@ -3,63 +3,49 @@
   <requires lib="gtk+" version="3.20"/>
 
   <template class="CcBoltDeviceEntry" parent="GtkListBoxRow">
-    <property name="visible">True</property>
-    <property name="can-focus">False</property>
     <property name="activatable">True</property>
     <child>
-      <object class="GtkGrid">
-        <property name="visible">True</property>
-        <property name="border-width">12</property>
-        <property name="margin_left">6</property>
-        <property name="margin_right">6</property>
+      <object class="GtkBox">
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>
         <property name="column-spacing">12</property>
         <property name="row-spacing">2</property>
         <child>
           <object class="GtkLabel" id="name_label">
             <property name="ellipsize">end</property>
             <property name="use-markup">True</property>
-            <property name="visible">True</property>
             <property name="hexpand">True</property>
             <property name="label">Device Name</property>
             <property name="xalign">0.0</property>
             <property name="valign">center</property>
           </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">0</property>
-          </packing>
         </child>
         <child>
           <object class="GtkBox">
-            <property name="visible">True</property>
             <property name="hexpand">False</property>
             <property name="halign">end</property>
             <property name="spacing">6</property>
             <child>
               <object class="GtkImage" id="status_warning">
                 <property name="visible">False</property>
-                <property name="can_focus">False</property>
                 <property name="icon_name">dialog-warning-symbolic</property>
                 <property name="icon_size">1</property>
                 <property name="margin_left">0</property>
                 <property name="xalign">0.0</property>
               </object>
             </child>
-	    <child>
-	      <object class="GtkLabel" id="status_label">
-		<property name="visible">True</property>
-		<property name="hexpand">False</property>
-		<property name="label">Status</property>
-		<property name="halign">end</property>
-		<property name="valign">center</property>
-		<property name="xalign">1.0</property>
-	      </object>
-	    </child>
-	  </object>
-          <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">0</property>
-          </packing>
+            <child>
+              <object class="GtkLabel" id="status_label">
+                <property name="hexpand">False</property>
+                <property name="label">Status</property>
+                <property name="halign">end</property>
+                <property name="valign">center</property>
+                <property name="xalign">1.0</property>
+              </object>
+            </child>
+          </object>
         </child>
       </object>
     </child>
