--- a/panels/printers/pp-details-dialog.ui
+++ b/panels/printers/pp-details-dialog.ui
@@ -3,20 +3,15 @@
 <interface>
   <requires lib="gtk+" version="3.12"/>
   <template class="PpDetailsDialog" parent="GtkDialog">
-    <property name="can_focus">False</property>
-    <property name="border_width">0</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="destroy_with_parent">True</property>
-    <property name="type_hint">dialog</property>
     <property name="use-header-bar">1</property>
     <child internal-child="headerbar">
       <object class="GtkHeaderBar">
-        <property name="visible">True</property>
-        <property name="show_close_button">True</property>
+        <property name="show_title_buttons">True</property>
         <child type="title">
           <object class="GtkLabel" id="dialog_title">
-            <property name="visible">True</property>
             <property name="wrap">True</property>
             <property name="max_width_chars">30</property>
             <property name="ellipsize">middle</property>
@@ -24,120 +19,116 @@
         </child>
       </object>
     </child>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="margin">20</property>
+        <property name="margin-top">20</property>
+        <property name="margin-bottom">20</property>
+        <property name="margin-start">20</property>
+        <property name="margin-end">20</property>
         <property name="halign">center</property>
         <child>
           <object class="GtkGrid">
-            <property name="visible">True</property>
             <property name="row-spacing">10</property>
             <property name="column-spacing">10</property>
             <child>
               <object class="GtkLabel">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Name</property>
                 <property name="halign">end</property>
                 <property name="mnemonic_widget">printer_name_entry</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">0</property>
-              </packing>
             </child>
             <child>
               <object class="GtkEntry" id="printer_name_entry">
-                <property name="visible">True</property>
                 <property name="halign">fill</property>
                 <property name="width_request">320</property>
                 <signal name="changed" handler="printer_name_changed" object="PpDetailsDialog" swapped="yes"/>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">0</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkLabel">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Location</property>
                 <property name="halign">end</property>
                 <property name="mnemonic_widget">printer_location_entry</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">1</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkEntry" id="printer_location_entry">
-                <property name="visible">True</property>
                 <property name="width_request">320</property>
                 <property name="halign">fill</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">1</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">1</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkLabel">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Address</property>
                 <property name="halign">end</property>
                 <property name="mnemonic_widget">printer_address_label</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">2</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">2</property>
-              </packing>
             </child>
             <child>
               <object class="GtkLabel" id="printer_address_label">
-                <property name="visible">True</property>
                 <property name="label">192.168.0.1</property>
                 <property name="halign">start</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">2</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkLabel">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Driver</property>
                 <property name="halign">end</property>
                 <property name="mnemonic_widget">printer_model_label</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">3</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">3</property>
-              </packing>
             </child>
             <child>
               <object class="GtkStack" id="printer_model_stack">
-                <property name="visible">True</property>
                 <property name="halign">start</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">3</property>
+                </layout>
                 <child>
                   <object class="GtkLabel" id="printer_model_label">
-                    <property name="visible">True</property>
                     <property name="halign">start</property>
                     <property name="label">HP Inkjet Delux 9000</property>
                     <property name="selectable">True</property>
@@ -145,19 +136,16 @@
                 </child>
                 <child>
                   <object class="GtkBox" id="loading_box">
-                    <property name="visible">True</property>
                     <property name="halign">start</property>
                     <property name="spacing">5</property>
                     <child>
                       <object class="GtkSpinner">
-                        <property name="visible">True</property>
-                        <property name="active">True</property>
+                        <property name="spinning">True</property>
                         <property name="halign">start</property>
                       </object>
                     </child>
                     <child>
                       <object class="GtkLabel">
-                        <property name="visible">True</property>
                         <property name="halign">start</property>
                         <property name="label" translatable="yes">Searching for preferred drivers…</property>
                       </object>
@@ -165,21 +153,19 @@
                   </object>
                 </child>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">3</property>
-              </packing>
             </child>
 
             <child>
-              <object class="GtkButtonBox" id="driver_buttons">
-                <property name="visible">True</property>
+              <object class="GtkBox" id="driver_buttons">
                 <property name="orientation">vertical</property>
                 <property name="spacing">10</property>
                 <property name="halign">start</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">4</property>
+                </layout>
                 <child>
                   <object class="GtkButton" id="search_for_drivers_button">
-                    <property name="visible">True</property>
                     <property name="label" translatable="yes">Search for Drivers</property>
                     <property name="halign">fill</property>
                     <signal name="clicked" handler="search_for_drivers" object="PpDetailsDialog" swapped="yes"/>
@@ -188,7 +174,6 @@
 
                 <child>
                   <object class="GtkButton" id="select_from_database_button">
-                    <property name="visible">True</property>
                     <property name="label" translatable="yes">Select from Database…</property>
                     <property name="halign">fill</property>
                     <signal name="clicked" handler="select_ppd_in_dialog" object="PpDetailsDialog" swapped="yes"/>
@@ -197,17 +182,12 @@
 
                 <child>
                   <object class="GtkButton" id="install_ppd_button">
-                    <property name="visible">True</property>
                     <property name="label" translatable="yes">Install PPD File…</property>
                     <property name="halign">fill</property>
                     <signal name="clicked" handler="select_ppd_manually" object="PpDetailsDialog" swapped="yes"/>
                   </object>
                 </child>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">4</property>
-              </packing>
 
             </child>
           </object>
