--- a/panels/printers/printer-entry.ui
+++ b/panels/printers/printer-entry.ui
@@ -2,69 +2,70 @@
 <interface>
   <!-- interface-requires gtk+ 3.8 -->
   <object class="GtkPopover" id="printer-menu">
+    <style>
+      <class name="menu" />
+    </style>
 
     <child>
       <object class="GtkGrid">
-        <property name="visible">True</property>
-        <property name="margin">10</property>
+        <property name="margin-top">10</property>
+        <property name="margin-bottom">10</property>
+        <property name="margin-start">10</property>
+        <property name="margin-end">10</property>
 
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="text" translatable="yes">Printing Options</property>
             <signal name="clicked" handler="on_show_printer_options_dialog"/>
+            <layout>
+              <property name="column">1</property>
+              <property name="row">0</property>
+            </layout>
           </object>
-          <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">0</property>
-          </packing>
         </child>
 
         <child>
           <object class="GtkModelButton">
-            <property name="visible">True</property>
             <property name="text" translatable="yes">Printer Details</property>
             <signal name="clicked" handler="on_show_printer_details_dialog"/>
+            <layout>
+              <property name="column">1</property>
+              <property name="row">1</property>
+            </layout>
           </object>
-          <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">1</property>
-          </packing>
         </child>
         <child>
           <object class="GtkCheckButton" id="printer_default_checkbutton">
-            <property name="visible">True</property>
             <property name="valign">center</property>
             <property name="label" translatable="yes" comments="Set this printer as default">Use Printer by Default</property>
             <signal name="toggled" handler="set_as_default_printer"/>
+            <layout>
+              <property name="column">0</property>
+              <property name="row">2</property>
+              <property name="column-span">3</property>
+            </layout>
           </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">2</property>
-            <property name="width">3</property>
-          </packing>
         </child>
         <child>
           <object class="GtkModelButton" id="clean_heads_menuitem">
             <property name="visible">False</property>
             <property name="text" translatable="yes" comments="Translators: This button executes command which cleans print heads of the printer.">Clean Print Heads</property>
-	    <signal name="clicked" handler="clean_heads"/>
-	  </object>
-          <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">3</property>
-          </packing>
+            <signal name="clicked" handler="clean_heads"/>
+            <layout>
+              <property name="column">1</property>
+              <property name="row">3</property>
+            </layout>
+          </object>
         </child>
         <child>
           <object class="GtkModelButton" id="remove_printer_menuitem">
-            <property name="visible">True</property>
             <property name="text" translatable="yes">Remove Printer</property>
             <signal name="clicked" handler="remove_printer"/>
+            <layout>
+              <property name="column">1</property>
+              <property name="row">4</property>
+            </layout>
           </object>
-          <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">4</property>
-          </packing>
         </child>
       </object>
     </child>
@@ -72,14 +73,14 @@
 
   <template class="PpPrinterEntry" parent="GtkListBoxRow">
     <property name="valign">center</property>
-    <property name="margin">10</property>
+    <property name="margin-top">10</property>
+    <property name="margin-bottom">10</property>
     <property name="margin-start">60</property>
     <property name="margin-end">60</property>
     <property name="activatable">False</property>
 
     <child>
       <object class="GtkFrame" id="content_area">
-        <property name="visible">True</property>
         <property name="valign">start</property>
         <style>
           <class name="view"/>
@@ -87,81 +88,78 @@
 
         <child>
           <object class="GtkGrid">
-            <property name="visible">True</property>
             <property name="row-spacing">8</property>
             <property name="column-spacing">15</property>
             <property name="margin_start">24</property>
             <property name="margin_end">20</property>
             <property name="margin_top">14</property>
             <property name="margin_bottom">20</property>
-            <property name="no-show-all">True</property>
 
             <child>
               <object class="GtkImage" id="printer_icon">
-                <property name="visible">True</property>
                 <property name="pixel-size">48</property>
                 <property name="icon_name">printer</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">0</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkGrid" id="printer_name_grid">
-                <property name="visible">True</property>
-                <property name="margin">10</property>
+                <property name="margin-top">10</property>
+                <property name="margin-bottom">10</property>
                 <property name="margin_start">0</property>
+                <property name="margin-end">10</property>
                 <property name="halign">start</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">0</property>
+                </layout>
                 <child>
 
                   <object class="GtkLabel" id="printer_name_label">
-                    <property name="visible">True</property>
                     <property name="hexpand">True</property>
                     <property name="halign">start</property>
                     <property name="ellipsize">PANGO_ELLIPSIZE_MIDDLE</property>
                     <property name="width-chars">22</property>
                     <property name="xalign">0</property>
+                    <layout>
+                      <property name="column">0</property>
+                      <property name="row">0</property>
+                    </layout>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                       <attribute name="scale" value="1.2"/>
                     </attributes>
                   </object>
-                  <packing>
-                    <property name="left-attach">0</property>
-                    <property name="top-attach">0</property>
-                  </packing>
                 </child>
 
                 <child>
                   <object class="GtkLabel" id="printer_status">
-                    <property name="visible">True</property>
                     <property name="halign">start</property>
+                    <layout>
+                      <property name="column">0</property>
+                      <property name="row">1</property>
+                    </layout>
                   </object>
-                  <packing>
-                    <property name="left-attach">0</property>
-                    <property name="top-attach">1</property>
-                  </packing>
                 </child>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">0</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkBox">
-                <property name="visible">True</property>
                 <property name="spacing">12</property>
                 <property name="orientation">horizontal</property>
                 <property name="valign">center</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">0</property>
+                </layout>
                 <child>
 
                   <object class="GtkButton" id="show_jobs_dialog_button">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
                     <property name="sensitive">False</property>
                     <property name="label" translatable="yes">No Active Jobs</property>
                     <signal name="clicked" handler="show_jobs_dialog"/>
@@ -170,80 +168,70 @@
 
                 <child>
                   <object class="GtkMenuButton">
-                    <property name="visible">True</property>
                     <property name="popover">printer-menu</property>
                     <child>
                       <object class="GtkImage">
-                        <property name="visible">True</property>
                         <property name="icon_name">emblem-system-symbolic</property>
                       </object>
                     </child>
                   </object>
                 </child>
               </object>
-              <packing>
-                <property name="left-attach">2</property>
-                <property name="top-attach">0</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkLabel" id="printer_model_label">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Model</property>
                 <property name="ellipsize">PANGO_ELLIPSIZE_MIDDLE</property>
                 <property name="halign">end</property>
                 <property name="xalign">1</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">1</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">1</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkLabel" id="printer_model">
-                <property name="visible">True</property>
                 <property name="halign">start</property>
                 <property name="ellipsize">PANGO_ELLIPSIZE_MIDDLE</property>
                 <property name="xalign">0</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">1</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">1</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkLabel" id="printer_location_label">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Location</property>
                 <property name="halign">end</property>
                 <property name="xalign">1</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">2</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">2</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkLabel" id="printer_location_address_label">
-                <property name="visible">True</property>
                 <property name="halign">start</property>
                 <property name="ellipsize">PANGO_ELLIPSIZE_MIDDLE</property>
                 <property name="xalign">0</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">2</property>
-              </packing>
             </child>
 
             <child>
@@ -251,14 +239,14 @@
                 <property name="label" translatable="yes">Ink Level</property>
                 <property name="halign">end</property>
                 <property name="xalign">1</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">3</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">3</property>
-              </packing>
             </child>
 
             <child>
@@ -267,19 +255,17 @@
                 <property name="halign">start</property>
                 <property name="height_request">18</property>
                 <property name="width_request">300</property>
-                <property name="border_width">2</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">3</property>
+                  <property name="column-span">2</property>
+                </layout>
 
                 <child>
                   <object class="GtkDrawingArea" id="supply_drawing_area">
-                    <property name="visible">True</property>
                   </object>
                 </child>
               </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">3</property>
-                <property name="width">2</property>
-              </packing>
             </child>
 
             <child>
@@ -287,17 +273,20 @@
                 <property name="visible">False</property>
                 <property name="spacing">10</property>
                 <property name="margin-top">6</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">4</property>
+                  <property name="column-span">3</property>
+                </layout>
 
                 <child>
                   <object class="GtkImage">
-                    <property name="visible">True</property>
                     <property name="icon_name">dialog-warning-symbolic</property>
                   </object>
                 </child>
 
                 <child>
                   <object class="GtkLabel" id="error_status">
-                    <property name="visible">True</property>
                     <property name="halign">start</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
@@ -307,7 +296,6 @@
 
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">True</property>
                     <property name="hexpand">True</property>
                     <property name="halign">start</property>
                     <property name="label" translatable="yes" comments="Translators: This is the message which follows the printer error.">Please restart when the problem is resolved.</property>
@@ -316,18 +304,12 @@
 
                 <child>
                   <object class="GtkButton">
-                    <property name="visible">True</property>
                     <property name="label" translatable="yes" comments="Translators: This is the button which restarts the printer.">Restart</property>
                     <signal name="clicked" handler="restart_printer"/>
                   </object>
                 </child>
 
               </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">4</property>
-                <property name="width">3</property>
-              </packing>
             </child>
           </object>
         </child>
